# rust-by-example

./: Cargo.toml  LICENSE
src/: fmt.rs  formatted_print.rs  main.rs  print_debug.rs  print_display.rs  testcase_list.rs  tuples.rs
src/array/: mod.rs
src/cast/: mod.rs
src/constants/: mod.rs
src/conversion/: mod.rs
src/conversion/from_and_into/: mod.rs
src/conversion/to_and_from_strings/: mod.rs
src/conversion/tryfrom_and_tryinto/: mod.rs
src/destructuring/: mod.rs
src/enums/: linked_list.rs  mod.rs
src/expressions/: mod.rs
src/flow_control/: mod.rs
src/flow_of_control/: mod.rs
src/flow_of_control/for_and_range/: mod.rs
src/flow_of_control/if_else/: mod.rs
src/flow_of_control/if_let/: mod.rs
src/flow_of_control/loop_/: mod.rs
src/flow_of_control/match_/: mod.rs
src/flow_of_control/match_/binding/: mod.rs
src/flow_of_control/match_/destructuring/: mod.rs
src/flow_of_control/match_/guards/: mod.rs
src/flow_of_control/while_/: mod.rs
src/flow_of_control/while_let/: mod.rs
src/fmt/: mod.rs
src/formatted_print/: mod.rs
src/functions/: mod.rs
src/functions/closures/: mod.rs
src/functions/higher_order_functions/: mod.rs
src/functions/methods/: mod.rs
src/print_debug/: mod.rs
src/print_display/: mod.rs
src/scoping_rules/lifetimes/: mod.rs
src/structs/: mod.rs
src/testcase_list/: mod.rs
src/tuples/: mod.rs
src/types/: mod.rs
src/types/aliasing/: mod.rs
src/types/casting/: mod.rs
src/types/inference/: mod.rs
src/types/literals/: mod.rs
src/variable_bindings/: mod.rs
(+11 files in other folders)
